tweaks on the title and h1

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        BlindGumption, the User
+        BlindGumption -- the User
     </title>
 </head>
 
 <body>
     <h1>
-        BlindGumption, the User
+        BlindGumption -- the User
     </h1>
     <p>
         I made this site because I'm getting a 404 when trying to access
@@ -20,9 +20,8 @@
         I'm hoping the repo isn't working because there's no DNS entry for the BlindGumption user pages.
     </p>
     <p>
-        You might find more interesting content at <a href="https://blindgumption.com">
-            the Blind Gumption Website
-        </a>
+        You might find more interesting content at 
+        <a href="https://blindgumption.com">the Blind Gumption Website</a>.
     </p>
 </body>
 
